compiler/tests/fixtures/invalid/semantics/association_variable_shadows_role.viv
// Invalid: associations variable shadows role name

action shadow-assoc:
    roles:
        @actor:
            as: initiator
        @target:
            as: recipient
    associations:
        for _@actor:
            commerce
        end
